Changes for 4.0.0alpha7

New features:
..F....... [ZBXNEXT-4528] added link to Zabbix official support page (Andzs, ashubin)
........S. [ZBXNEXT-4520] added values to boolean mapping: "ok, master" as 1 and "err, slave" as 0 (viktors)
..F....... [ZBXNEXT-4185] added support of multiple items in "Plain text" widget (ashubin)

Bug fixes:
..F....... [ZBX-12350] fixed severity picker styles (Andzs, ashubin)
...G...PS. [ZBX-13782] fixed decoding of Unicode characters in JSON (Andris)
..F....... [ZBX-13767] fixed "undefined index: acknowledges" error on problems page (agriscenko)
..F....... [ZBX-12175] fixed subfilter entries with long names going off the screen (agriscenko, Andzs)
..F....... [ZBX-12644] fixed filter being partially reset when using pagination in availability report page (Ivo)
........S. [ZBX-12390] fixed problem when triggers might not use correct value if an item values within one second were received in wrong historical order (wiper)
.......PS. [ZBX-13788] fixed host availability stuck in unknown state after proxy changes (wiper)
........S. [ZBX-14313] fixed trigger level correlation when multiple tags are set (wiper)

--------------------------------------------------------------------------------
Changes for 4.0.0alpha6

New features:
..F....... [ZBXNEXT-4415] added new mode "Compact view" to the Problems page with ability to toggle highlighting whole row; added option to toggle timeline (agriscenko, Andzs)
A.F.....S. [ZBXNEXT-2788] added support "NOT" keyword in custom expression fields (Ivo, Sergejs)
..F....... [ZBXNEXT-4516] renamed dashboard widget and screen element "System status" to "Problems by severity" (Sasha)
..F....... [ZBXNEXT-4516] renamed dashboard widget and screen element "Host status" to "Problem hosts" (Sasha)
..F....... [ZBXNEXT-4516] renamed dashboard widget, screen element and report "Status of Zabbix" to "System information" (Sasha)