@@ -7,7 +7,7 @@ $lighter-red: #ff5050;
 
 $orange: #ff7800;
 
-$dark-yellow: #e99003;
+$dark-yellow: #ffa20d;
 $yellow: #a78820;
 $light-yellow: #2f280a;
 $lighter-yellow: #222;
