@@ -7,7 +7,7 @@ $lighter-red: #cc0000;
 
 $orange: #ed3400;
 
-$dark-yellow: #e99003;
+$dark-yellow: #af6b00;
 $yellow: #a78820;
 $light-yellow: #f4f4f4;
 $lighter-yellow: #f4f4f4;
